<resources>
    <string name="app_name">playAndroid</string>
    <string name="splash_tip_text">Play Android</string>
    <string name="login_input_username_hint">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_repassword">请重复输入密码</string>
    <string name="login_hold_hint">记住密码</string>
    <string name="login_forget_hint">注册</string>
    <string name="register_or_login">登录 | 注册</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="my_theme">浏览历史</string>
    <string name="my_setting">退出登录</string>
    <string name="my_collections">收藏</string>
    <string name="my_version">版本号</string>
    <string name="my_clear">清除缓存</string>
</resources>
