<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:contentDescription="@null"
        android:scaleType="fitXY" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <com.welcome.home.playandroid.ui.TitleView
            android:id="@+id/activity_register_or_login_titleview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/activity_register_or_login_head_iv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="38dp"
            android:elevation="10dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            tools:ignore="UnusedAttribute" />
        <!--app:border_color="#ffffff"-->
        <!--app:border_width="2dp"-->

        <LinearLayout
            android:id="@+id/username_login_ll"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_login_input_ok"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ico_username_iv"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:contentDescription="@null"
                app:srcCompat="@mipmap/ic_singup_mobile" />

            <View
                android:layout_width="1px"
                android:layout_height="22dp"
                android:background="@color/login_line_color" />

            <EditText
                android:id="@+id/username_login_et"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@null"
                android:ems="15"
                android:focusable="true"
                android:hint="@string/login_input_username_hint"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:textColor="@color/white"
                android:textColorHint="@color/login_line_color"
                android:textCursorDrawable="@null"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/username_login_del_iv"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:visibility="gone"
                app:srcCompat="@mipmap/ic_clear" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pwd_login_ll"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_login_input_ok"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ico_pwd_iv"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:contentDescription="@null"
                app:srcCompat="@mipmap/ic_login_password" />

            <View
                android:layout_width="1px"
                android:layout_height="22dp"
                android:background="@color/login_line_color" />

            <EditText
                android:id="@+id/pwd_login_et"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minLines="1"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:textColor="@color/white"
                android:textColorHint="@color/login_line_color"
                android:textCursorDrawable="@null"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/pwd_del_iv"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:visibility="gone"
                app:srcCompat="@mipmap/ic_clear" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/repwd_login_ll"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_login_input_ok"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:id="@+id/ico_repwd_iv"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:contentDescription="@null"
                app:srcCompat="@mipmap/ic_login_password" />

            <View
                android:layout_width="1px"
                android:layout_height="22dp"
                android:background="@color/login_line_color" />

            <EditText
                android:id="@+id/repwd_login_et"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_repassword"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minLines="1"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:textColor="@color/white"
                android:textColorHint="@color/login_line_color"
                android:textCursorDrawable="@null"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/repwd_del_iv"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:visibility="gone"
                app:srcCompat="@mipmap/ic_clear" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/pwd_hold_login_iv"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="4dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="4dp"
                android:layout_marginStart="6dp"
                android:adjustViewBounds="false"
                android:contentDescription="@null"
                android:padding="8dp"
                android:visibility="invisible"
                app:srcCompat="@mipmap/checkbox_checked" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/pwd_forget_login_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingBottom="4dp"
                android:paddingLeft="4dp"
                android:paddingStart="4dp"
                android:paddingTop="4dp"
                android:text="@string/login_forget_hint"
                android:textColor="@color/login_input_active"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>


        <Button
            android:id="@+id/submit_login_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_login_submit"
            android:elevation="0dp"
            android:outlineProvider="none"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="UnusedAttribute" />
    </LinearLayout>
</FrameLayout>